--- a/5.5 MyPhotosRetrofit-KotlinVersion/app/src/main/res/layout/activity_main.xml
+++ b/5.5 MyPhotosRetrofit-KotlinVersion/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     tools:context=".MainActivity">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerview"
+        android:id="@+id/main_activity_recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
