--- a/WeatherApplication/app/src/main/res/layout/element_in_fragment_activity.xml
+++ b/WeatherApplication/app/src/main/res/layout/element_in_fragment_activity.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:cardCornerRadius="4dp">
@@ -12,11 +11,11 @@
 
         <ImageView
             android:id="@+id/image_view_cloud"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="24dp"
-            android:layout_marginVertical="10dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_margin="16dp"
             android:src="@drawable/image01"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -24,7 +23,7 @@
             android:id="@+id/text_view_day"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="24dp"
+            android:layout_margin="20dp"
             android:text="Tomorrow"
             android:textSize="18sp"
             android:textStyle="bold"
@@ -45,14 +44,13 @@
             android:id="@+id/text_view_temperature"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="10dp"
-            android:layout_marginVertical="10dp"
+            android:layout_marginHorizontal="20dp"
             android:text="15°"
-            android:textSize="24sp"
+            android:textSize="20sp"
             android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="@id/image_view_cloud"
-            app:layout_constraintEnd_toStartOf="@id/text_view_temperature_feels_like"
-            app:layout_constraintTop_toTopOf="@id/image_view_cloud" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/guideline"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/text_view_temperature_feels_like"
@@ -61,10 +59,17 @@
             android:layout_marginHorizontal="24dp"
             android:layout_marginVertical="10dp"
             android:text="15°"
-            android:textSize="24sp"
-            app:layout_constraintBottom_toBottomOf="@id/image_view_cloud"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@id/image_view_cloud" />
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.8" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
