--- a/WeatherApplication/app/src/main/res/layout/first_element_in_recycler_view.xml
+++ b/WeatherApplication/app/src/main/res/layout/first_element_in_recycler_view.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:backgroundTint="#F0F8FF"
     app:cardCornerRadius="4dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -10,66 +11,62 @@
         android:layout_height="wrap_content">
 
         <ImageView
-            android:id="@+id/image_view_cloud"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_margin="16dp"
+            android:id="@+id/image_view_cloud_in_first_element"
+            android:layout_width="140dp"
+            android:layout_height="140dp"
+            android:layout_marginHorizontal="30dp"
             android:src="@drawable/image01"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/text_view_day"
+            android:id="@+id/text_view_day_in_first_element"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="24dp"
-            android:text="Tomorrow"
+            android:layout_margin="30dp"
+            android:text="Today"
             android:textSize="18sp"
             android:textStyle="bold"
-            app:layout_constraintStart_toEndOf="@id/image_view_cloud"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/text_view_day_forecast"
+            android:id="@+id/text_view_day_forecast_in_first_element"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="24dp"
+            android:layout_marginHorizontal="30dp"
+            android:layout_marginBottom="10dp"
             android:text="Scattered Clouds"
             android:textSize="16sp"
-            app:layout_constraintStart_toEndOf="@id/image_view_cloud"
-            app:layout_constraintTop_toBottomOf="@id/text_view_day" />
+            app:layout_constraintEnd_toEndOf="@id/image_view_cloud_in_first_element"
+            app:layout_constraintStart_toStartOf="@id/image_view_cloud_in_first_element"
+            app:layout_constraintTop_toBottomOf="@id/image_view_cloud_in_first_element"
+            app:layout_constraintBottom_toBottomOf="parent"/>
 
         <TextView
-            android:id="@+id/text_view_temperature"
+            android:id="@+id/text_view_temperature_in_first_element"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="20dp"
+            android:layout_marginHorizontal="50dp"
             android:text="15°"
-            android:textSize="20sp"
+            android:textSize="40sp"
             android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/guideline"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <TextView
-            android:id="@+id/text_view_temperature_feels_like"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="24dp"
-            android:layout_marginVertical="10dp"
-            android:text="15°"
-            android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline"
+        <TextView
+            android:id="@+id/text_view_temperature_feels_like_in_first_element"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.8" />
+            android:layout_marginHorizontal="50dp"
+            android:text="15°"
+            android:textSize="40sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/text_view_temperature_in_first_element" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
