--- a/WeatherApplication/app/src/main/res/layout/first_element_in_recycler_view.xml
+++ b/WeatherApplication/app/src/main/res/layout/first_element_in_recycler_view.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:backgroundTint="#F0F8FF"
-    app:cardCornerRadius="4dp">
+    android:layout_margin="4dp"
+    app:cardCornerRadius="8dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
