--- a/WeatherApplication/app/src/main/res/layout/activity_main.xml
+++ b/WeatherApplication/app/src/main/res/layout/activity_main.xml
@@ -8,9 +8,11 @@
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/fragment_container"
+
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent">
+    </androidx.fragment.app.FragmentContainerView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
