--- a/9.6_WeatherApplication/app/src/main/res/layout/forecast_single_view.xml
+++ b/9.6_WeatherApplication/app/src/main/res/layout/forecast_single_view.xml
@@ -6,19 +6,19 @@
     android:layout_height="wrap_content">
 
     <ImageView
-        android:id="@+id/imageView_single_view"
+        android:id="@+id/icon_image_view"
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:layout_margin="8dp"
         android:scaleType="centerCrop"
-        android:src="@drawable/a01d"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="MissingConstraints" />
+        tools:src="@drawable/a01d"
+        tools:ignore="ContentDescription" />
 
     <TextView
-        android:id="@+id/textView_single_view_day_of_week"
+        android:id="@+id/day_of_week_text_view"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_margin="8dp"
@@ -26,18 +26,18 @@
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@id/guideline_single_view_horizontal"
-        app:layout_constraintLeft_toRightOf="@id/imageView_single_view"
-        app:layout_constraintTop_toTopOf="@id/imageView_single_view" />
+        app:layout_constraintLeft_toRightOf="@id/icon_image_view"
+        app:layout_constraintTop_toTopOf="@id/icon_image_view" />
 
     <TextView
         android:id="@+id/textView_single_view_forecast"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
+        android:layout_margin="16dp"
         android:text="@string/forecast"
         android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="@id/imageView_single_view"
-        app:layout_constraintLeft_toRightOf="@id/imageView_single_view"
+        app:layout_constraintBottom_toBottomOf="@id/icon_image_view"
+        app:layout_constraintLeft_toRightOf="@id/icon_image_view"
         app:layout_constraintTop_toBottomOf="@id/guideline_single_view_horizontal" />
 
     <androidx.constraintlayout.widget.Guideline
@@ -69,7 +69,7 @@
         android:id="@+id/textView_single_view_temp_low"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
+        android:layout_margin="16dp"
         android:text="@string/_0"
         android:textSize="30sp"
         app:layout_constraintBottom_toTopOf="parent"
