--- a/9.6_WeatherApplication/app/src/main/res/layout/activity_main.xml
+++ b/9.6_WeatherApplication/app/src/main/res/layout/activity_main.xml
@@ -1,17 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".screen.MainActivity">
 
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/bar_header"
+        app:logo="@drawable/ic_menu_white"
+        app:title=" "
+        app:titleTextColor="@color/black" />
+
     <androidx.fragment.app.FragmentContainerView
-        android:name="com.kryvovyaz.a96_weatherapplication.screen.forecastlist.ForecastListFragment"
         android:id="@+id/fragment_container"
+        android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        app:defaultNavHost="true"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:navGraph="@navigation/nav_graph" />
 
-</FrameLayout>
+</LinearLayout>
