--- a/9.6_WeatherApplication/app/src/main/res/layout-land/fragment_forecast_details.xml
+++ b/9.6_WeatherApplication/app/src/main/res/layout-land/fragment_forecast_details.xml
@@ -28,7 +28,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="12dp"
+            android:layout_marginTop="48dp"
             android:foregroundGravity="center_horizontal"
             android:gravity="center_horizontal"
             android:text="@string/today"
@@ -58,11 +58,12 @@
             android:id="@+id/forecast_details"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/image_details"
-            android:layout_alignStart="@id/image_details"
-            android:layout_alignEnd="@id/image_details"
-            android:layout_marginTop="24dp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="48dp"
+            android:foregroundGravity="center_horizontal"
+            android:layout_below="@id/date_details"
             android:gravity="center_horizontal"
+
             android:text="@string/forecast"
             android:textSize="18sp" />
     </RelativeLayout>
@@ -72,7 +73,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.5" />
+        app:layout_constraintGuide_percent="0.66" />
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
