--- a/9.6_WeatherApplication/app/src/main/res/layout/today_forecast.xml
+++ b/9.6_WeatherApplication/app/src/main/res/layout/today_forecast.xml
@@ -3,8 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="2dp"
-    android:background="#F0F8FF">
+    android:background="@color/bar_header">
 
     <ImageView
         android:id="@+id/image_today"
