--- a/9.6_WeatherApplication/app/src/main/res/layout-land/fragment_forecast_details.xml
+++ b/9.6_WeatherApplication/app/src/main/res/layout-land/fragment_forecast_details.xml
@@ -31,6 +31,7 @@
             android:layout_marginTop="48dp"
             android:foregroundGravity="center_horizontal"
             android:gravity="center_horizontal"
+            android:textStyle="bold"
             android:text="@string/today"
             android:textSize="24sp" />
 
