--- a/9.6_WeatherApplication/app/src/main/res/layout/today_forecast.xml
+++ b/9.6_WeatherApplication/app/src/main/res/layout/today_forecast.xml
@@ -29,6 +29,7 @@
         android:gravity="center_vertical"
         android:text="@string/today"
         android:textSize="24sp"
+        android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="@id/image_today" />
@@ -37,12 +38,13 @@
         android:id="@+id/forecast_today"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
         android:text="@string/forecast"
+        android:gravity="center_horizontal"
         android:textSize="18sp"
         app:layout_constraintLeft_toLeftOf="@id/image_today"
         app:layout_constraintRight_toRightOf="@id/image_today"
-        app:layout_constraintTop_toBottomOf="@id/image_today" />
+        app:layout_constraintTop_toBottomOf="@id/image_today"
+        />
 
     <TextView
         android:id="@+id/tempHigh_today"
@@ -69,10 +71,12 @@
         android:id="@+id/humidity_today"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
         android:text="@string/humidity"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="@id/guideline_vertical"
-        app:layout_constraintRight_toRightOf="@id/guideline_vertical"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintRight_toRightOf="@id/guideline_vertical" />
+
     <TextView
         android:id="@+id/curent_temp_today"
         android:layout_width="wrap_content"
@@ -80,6 +84,6 @@
         android:text="@string/current_temp"
         app:layout_constraintLeft_toLeftOf="@id/guideline_vertical"
         app:layout_constraintRight_toRightOf="@id/guideline_vertical"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
