--- a/9.6_WeatherApplication/app/src/main/res/layout/today_forecast.xml
+++ b/9.6_WeatherApplication/app/src/main/res/layout/today_forecast.xml
@@ -34,17 +34,49 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="@id/image_today" />
 
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline_icons_vertical"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.35" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline_icons_horizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.50" />
+
+    <ImageView
+        android:id="@+id/wind_icon"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginBottom="6dp"
+        android:src="@drawable/windmill"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toRightOf="@id/guideline_icons_vertical"
+        android:contentDescription="@string/wind_icon" />
+
+    <TextView
+        android:id="@+id/wind_speed_today"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="6dp"
+        android:text=""
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toRightOf="@id/wind_icon" />
+
     <TextView
         android:id="@+id/forecast_today"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/forecast"
         android:gravity="center_horizontal"
+        android:text="@string/forecast"
         android:textSize="18sp"
         app:layout_constraintLeft_toLeftOf="@id/image_today"
         app:layout_constraintRight_toRightOf="@id/image_today"
-        app:layout_constraintTop_toBottomOf="@id/image_today"
-        />
+        app:layout_constraintTop_toBottomOf="@id/image_today" />
 
     <TextView
         android:id="@+id/tempHigh_today"
@@ -67,15 +99,25 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/header_today" />
 
+    <ImageView
+        android:id="@+id/humidity_icon"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="6dp"
+        android:layout_marginBottom="6dp"
+        android:contentDescription="@string/humidity_icon"
+        android:src="@drawable/humidity"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toRightOf="@id/wind_speed_today" />
+
     <TextView
         android:id="@+id/humidity_today"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:text="@string/humidity"
+        android:layout_marginStart="6dp"
+        android:layout_marginBottom="6dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="@id/guideline_vertical"
-        app:layout_constraintRight_toRightOf="@id/guideline_vertical" />
+        app:layout_constraintLeft_toRightOf="@id/humidity_icon" />
 
     <TextView
         android:id="@+id/curent_temp_today"
