--- a/9.6_WeatherApplication/app/src/main/res/layout/fragment_forecast_details.xml
+++ b/9.6_WeatherApplication/app/src/main/res/layout/fragment_forecast_details.xml
@@ -8,7 +8,7 @@
     <RelativeLayout
         android:id="@+id/relativeLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@id/guideline"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -61,8 +61,8 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/image_details"
             android:layout_alignStart="@id/image_details"
-            android:layout_alignEnd="@id/image_details"
-            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:layout_marginStart="16dp"
             android:gravity="center_horizontal"
             android:text="@string/forecast"
             android:textSize="18sp" />
