--- a/9.6_WeatherApplication/app/src/main/res/layout/today_forecast.xml
+++ b/9.6_WeatherApplication/app/src/main/res/layout/today_forecast.xml
@@ -10,6 +10,7 @@
         android:layout_width="120dp"
         android:layout_height="120dp"
         android:layout_margin="4dp"
+        android:contentDescription="@string/icon"
         android:src="@drawable/a01d"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -50,30 +51,35 @@
 
     <ImageView
         android:id="@+id/wind_icon"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:layout_marginEnd="6dp"
         android:layout_marginBottom="6dp"
-        android:src="@drawable/windmill"
+        android:contentDescription="@string/wind_icon"
+        android:src="@drawable/windicon"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toRightOf="@id/guideline_icons_vertical"
-        android:contentDescription="@string/wind_icon" />
+        app:layout_constraintRight_toLeftOf="@id/wind_speed_today" />
 
     <TextView
         android:id="@+id/wind_speed_today"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="6dp"
+        android:textSize="22sp"
         android:layout_marginBottom="6dp"
         android:text=""
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toRightOf="@id/wind_icon" />
+        app:layout_constraintRight_toLeftOf="@id/guideline_vertical" />
 
     <TextView
         android:id="@+id/forecast_today"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="6dp"
         android:gravity="center_horizontal"
         android:text="@string/forecast"
         android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="@id/image_today"
         app:layout_constraintRight_toRightOf="@id/image_today"
         app:layout_constraintTop_toBottomOf="@id/image_today" />
@@ -101,20 +107,21 @@
 
     <ImageView
         android:id="@+id/humidity_icon"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
         android:layout_marginStart="6dp"
         android:layout_marginBottom="6dp"
         android:contentDescription="@string/humidity_icon"
         android:src="@drawable/humidity"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toRightOf="@id/wind_speed_today" />
+        app:layout_constraintLeft_toRightOf="@id/guideline_vertical" />
 
     <TextView
         android:id="@+id/humidity_today"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="6dp"
+        android:textSize="22sp"
         android:layout_marginBottom="6dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toRightOf="@id/humidity_icon" />
@@ -123,9 +130,21 @@
         android:id="@+id/curent_temp_today"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/current_temp"
-        app:layout_constraintLeft_toLeftOf="@id/guideline_vertical"
-        app:layout_constraintRight_toRightOf="@id/guideline_vertical"
+        android:layout_marginStart="3dp"
+        android:layout_marginTop="6dp"
+        android:textSize="24sp"
+        app:layout_constraintHorizontal_bias="1"
+        app:layout_constraintLeft_toRightOf="@id/guideline_vertical"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:layout_marginTop="11dp"
+        android:layout_marginEnd="3dp"
+        android:contentDescription="@string/today_temp_icon"
+        android:src="@drawable/termometer"
+        app:layout_constraintRight_toLeftOf="@id/guideline_vertical"
         app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
