--- a/MyWeatherApp/app/src/main/res/layout/fragment_settings.xml
+++ b/MyWeatherApp/app/src/main/res/layout/fragment_settings.xml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="@color/white"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".screen.settings.SettingsFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_settings_fragment" />
+    <include layout="@layout/layout_settings_notification" />
 
-</FrameLayout>
+    <include layout="@layout/layout_settings_unit" />
+
+    <include layout="@layout/layout_settings_days" />
+
+</LinearLayout>
