--- a/9.6_WeatherApplication/app/src/main/res/layout/forecast_single_view.xml
+++ b/9.6_WeatherApplication/app/src/main/res/layout/forecast_single_view.xml
@@ -25,6 +25,7 @@
         android:text="@string/day_of_week"
         android:textSize="18sp"
         android:textStyle="bold"
+        android:textColor="@color/bar_bottom"
         app:layout_constraintBottom_toTopOf="@id/guideline_single_view_horizontal"
         app:layout_constraintLeft_toRightOf="@id/icon_image_view"
         app:layout_constraintTop_toTopOf="@id/icon_image_view" />
@@ -36,6 +37,7 @@
         android:layout_margin="16dp"
         android:text="@string/forecast"
         android:textSize="16sp"
+        android:textColor="@color/bar_header"
         app:layout_constraintBottom_toBottomOf="@id/icon_image_view"
         app:layout_constraintLeft_toRightOf="@id/icon_image_view"
         app:layout_constraintTop_toBottomOf="@id/guideline_single_view_horizontal" />
@@ -58,8 +60,7 @@
         android:id="@+id/temp_high_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/_0"
-        android:textSize="30sp"
+        style="@style/ForecastLIstDegrees"
         app:layout_constraintBottom_toTopOf="parent"
         app:layout_constraintRight_toLeftOf="@id/guideline_single_view_vertical"
         app:layout_constraintRight_toRightOf="parent"
@@ -70,8 +71,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
-        android:text="@string/_0"
-        android:textSize="30sp"
+        style="@style/ForecastLIstDegrees"
         app:layout_constraintBottom_toTopOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="parent" />
