--- a/9.6_WeatherApplication/app/src/main/res/layout/fragment_forecast_details.xml
+++ b/9.6_WeatherApplication/app/src/main/res/layout/fragment_forecast_details.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
+
     <RelativeLayout
         android:id="@+id/relativeLayout"
         android:layout_width="match_parent"
@@ -29,11 +30,12 @@
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="12dp"
-            android:textStyle="bold"
             android:foregroundGravity="center_horizontal"
             android:gravity="center_horizontal"
             android:text="@string/today"
-            android:textSize="24sp" />
+            android:textColor="@color/bar_bottom"
+            android:textSize="24sp"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/tempHigh_details"
@@ -44,6 +46,7 @@
             android:layout_marginEnd="87dp"
             android:foregroundGravity="center_vertical"
             android:text="@string/h"
+            android:textColor="@color/bar_header"
             android:textSize="56sp" />
 
         <TextView
@@ -53,6 +56,7 @@
             android:layout_below="@id/tempHigh_details"
             android:layout_alignEnd="@id/tempHigh_details"
             android:text="@string/l"
+            android:textColor="@color/bar_header"
             android:textSize="56sp" />
 
         <TextView
@@ -61,10 +65,11 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/image_details"
             android:layout_alignStart="@id/image_details"
-            android:layout_marginBottom="10dp"
             android:layout_marginStart="16dp"
+            android:layout_marginBottom="10dp"
             android:gravity="center_horizontal"
             android:text="@string/forecast"
+            android:textColor="@color/bar_bottom"
             android:textSize="18sp" />
     </RelativeLayout>
 
@@ -79,7 +84,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:background="@color/bar_bottom"
+        android:background="@color/bar_header"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@id/guideline">
@@ -87,39 +92,31 @@
 
         <TextView
             android:id="@+id/humidity_details"
+            style="@style/DetailsForecastText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center"
             android:text="@string/humidity"
-            android:textColor="@color/white"
-            android:textSize="18sp"
-            android:layout_marginStart="16dp"
             app:layout_constraintBottom_toTopOf="@id/presure_details"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/humidity"
+            style="@style/DetailsForecastTextDetails"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="28sp"
-            android:textColor="@color/white"
-            android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@id/presure"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:text="@string/_100" />
+            app:layout_constraintTop_toTopOf="parent" />
 
 
         <TextView
             android:id="@+id/presure_details"
+            style="@style/DetailsForecastText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/pressure"
-            android:textColor="@color/white"
-            android:textSize="18sp"
-            android:layout_marginStart="16dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -129,11 +126,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:gravity="center"
-            android:text="@string/_100"
-            android:textSize="28sp"
-            android:textColor="@color/white"
-            android:textStyle="bold"
+            style="@style/DetailsForecastTextDetails"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -142,29 +135,24 @@
 
         <TextView
             android:id="@+id/wind_details"
+            style="@style/DetailsForecastText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/white"
-            android:textSize="18sp"
-            android:layout_marginStart="16dp"
-            app:layout_constraintTop_toBottomOf="@id/presure_details"
+            android:text="@string/wind"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
-            android:text="@string/wind" />
+            app:layout_constraintTop_toBottomOf="@id/presure_details" />
 
         <TextView
             android:id="@+id/wind"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            style="@style/DetailsForecastTextDetails"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/presure"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:textSize="28sp"
-            android:textColor="@color/white"
-            android:textStyle="bold"
-            android:text="@string/_100" />
+            app:layout_constraintTop_toBottomOf="@id/presure" />
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
