--- a/9.6_WeatherApplication/app/src/main/res/layout/today_forecast.xml
+++ b/9.6_WeatherApplication/app/src/main/res/layout/today_forecast.xml
@@ -29,6 +29,7 @@
         android:layout_height="match_parent"
         android:gravity="center_vertical"
         android:text="@string/today"
+        android:textColor="@color/white"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -62,12 +63,10 @@
 
     <TextView
         android:id="@+id/wind_speed_today"
+        style="@style/ForecastTodayDetails"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="6dp"
-        android:textSize="22sp"
-        android:layout_marginBottom="6dp"
-        android:text=""
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toLeftOf="@id/guideline_vertical" />
 
@@ -78,6 +77,7 @@
         android:layout_marginBottom="6dp"
         android:gravity="center_horizontal"
         android:text="@string/forecast"
+        android:textColor="@color/white"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="@id/image_today"
@@ -86,21 +86,19 @@
 
     <TextView
         android:id="@+id/tempHigh_today"
+        style="@style/ForecastTodayTemp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
         android:text="@string/h"
-        android:textSize="48sp"
         app:layout_constraintRight_toLeftOf="@id/guideline_vertical"
         app:layout_constraintTop_toBottomOf="@id/header_today" />
 
     <TextView
         android:id="@+id/tempLow_today"
+        style="@style/ForecastTodayTemp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
         android:text="@string/l"
-        android:textSize="48sp"
         app:layout_constraintLeft_toRightOf="@id/tempHigh_today"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/header_today" />
@@ -118,11 +116,10 @@
 
     <TextView
         android:id="@+id/humidity_today"
+        style="@style/ForecastTodayDetails"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="6dp"
-        android:textSize="22sp"
-        android:layout_marginBottom="6dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toRightOf="@id/humidity_icon" />
 
@@ -132,6 +129,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="3dp"
         android:layout_marginTop="6dp"
+        android:textColor="@color/white"
         android:textSize="24sp"
         app:layout_constraintHorizontal_bias="1"
         app:layout_constraintLeft_toRightOf="@id/guideline_vertical"
