change toolbar arrow color to white

--- a/9.6_WeatherApplication/app/src/main/res/layout/activity_main.xml
+++ b/9.6_WeatherApplication/app/src/main/res/layout/activity_main.xml
@@ -12,6 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/bar_header"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         app:title="Weather"
         app:titleTextColor="@color/white" />
 
