--- a/9.6_WeatherApplication/app/src/main/res/values/style.xml
+++ b/9.6_WeatherApplication/app/src/main/res/values/style.xml
@@ -40,5 +40,7 @@
         <item name="android:textSize">24sp</item>
         <item name="android:layout_marginBottom">8dp</item>
     </style>
-
+    <style name="BaseTheme" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="colorControlNormal">@color/white</item>
+    </style>
 </resources>
