--- a/WeatherApplication/app/src/main/res/layout/forecast_today_item.xml
+++ b/WeatherApplication/app/src/main/res/layout/forecast_today_item.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="4dp"
-    android:backgroundTint="#F0F8FF"
+    android:backgroundTint="@color/today_view"
     app:cardCornerRadius="8dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
