--- a/WeatherApplication/app/src/main/res/values/colors.xml
+++ b/WeatherApplication/app/src/main/res/values/colors.xml
@@ -6,6 +6,11 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
-    <color name="gray">@android:color/darker_gray</color>
+
+    <color name="subtitle_text">@android:color/darker_gray</color>
+    <color name="title_text">@color/black</color>
+
     <color name="white">#FFFFFFFF</color>
+    <color name="today_view">#F0F8FF</color>
+
 </resources>
