add font to the toolbar

--- a/9.6_WeatherApplication/app/src/main/res/values/style.xml
+++ b/9.6_WeatherApplication/app/src/main/res/values/style.xml
@@ -42,5 +42,7 @@
     </style>
     <style name="BaseTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="colorControlNormal">@color/white</item>
+        <item name="android:fontFamily">@font/bevan</item>
     </style>
+
 </resources>
