--- a/9.6_WeatherApplication/app/src/main/res/layout/fragment_forecast_details.xml
+++ b/9.6_WeatherApplication/app/src/main/res/layout/fragment_forecast_details.xml
@@ -84,7 +84,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:background="@color/bar_header"
+        android:background="@color/bar_bottom"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@id/guideline">
