--- a/9.6_WeatherApplication/app/src/main/res/layout/layout_settings_notification.xml
+++ b/9.6_WeatherApplication/app/src/main/res/layout/layout_settings_notification.xml
@@ -5,10 +5,10 @@
     android:layout_height="wrap_content">
 
     <include
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
         android:id="@+id/notification_settings_item"
         layout="@layout/layout_settings_item"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         app:layout_constraintEnd_toStartOf="@id/notification_settings_checkbox"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -17,7 +17,7 @@
         android:id="@+id/notification_settings_checkbox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/default_margin"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
