--- a/9.6_WeatherApplication/app/src/main/res/layout/today_forecast.xml
+++ b/9.6_WeatherApplication/app/src/main/res/layout/today_forecast.xml
@@ -29,7 +29,7 @@
         android:layout_height="match_parent"
         android:gravity="center_vertical"
         android:text="@string/today"
-        android:textColor="@color/white"
+        style="@style/ForecastTodayDescription"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -72,12 +72,12 @@
 
     <TextView
         android:id="@+id/forecast_today"
+        style="@style/ForecastTodayDescription"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="6dp"
         android:gravity="center_horizontal"
         android:text="@string/forecast"
-        android:textColor="@color/white"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="@id/image_today"
@@ -129,7 +129,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="3dp"
         android:layout_marginTop="6dp"
-        android:textColor="@color/white"
+        style="@style/ForecastTodayDescription"
         android:textSize="24sp"
         app:layout_constraintHorizontal_bias="1"
         app:layout_constraintLeft_toRightOf="@id/guideline_vertical"
