--- a/9.6_WeatherApplication/app/src/main/res/values-night/themes.xml
+++ b/9.6_WeatherApplication/app/src/main/res/values-night/themes.xml
@@ -1,16 +1,66 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.96_WeatherApplication" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.96_WeatherApplication" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_200</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
         <item name="colorOnPrimary">@color/black</item>
+        <item name="colorPrimary">@android:color/black</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_200</item>
         <item name="colorOnSecondary">@color/black</item>
-        <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor">@color/black</item>
         <!-- Customize your theme here. -->
     </style>
+
+    <style name="SubTitleText">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/bar_header</item>
+    </style>
+
+    <style name="TitleText">
+        <item name="android:textSize">20sp</item>
+        <item name="android:textColor">@color/bar_bottom</item>
+    </style>
+
+    <style name="ForecastLIstDegrees">
+        <item name="android:textColor">@color/bar_header</item>
+        <item name="android:text">"@string/_0"</item>
+        <item name="android:textSize">30sp</item>
+    </style>
+
+    <style name="DetailsForecastText">
+        <item name="android:gravity">center</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:layout_marginStart">16dp</item>
+    </style>
+
+    <style name="DetailsForecastTextDetails">
+        <item name="android:gravity">center</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">28sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="ForecastTodayTemp">
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">48sp</item>
+        <item name="android:layout_margin">8dp</item>
+    </style>
+
+    <style name="ForecastTodayDetails">
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">24sp</item>
+        <item name="android:layout_marginBottom">8dp</item>
+    </style>
+
+    <style name="BaseTheme" parent="Theme.AppCompat.DayNight.NoActionBar">
+        <item name="android:fontFamily">@font/bevan</item>
+    </style>
+
+    <style name="ForecastTodayDescription">
+        <item name="android:textColor">@color/black</item>
+    </style>
+
 </resources>
