--- a/9.6_WeatherApplication/app/src/main/res/values/style.xml
+++ b/9.6_WeatherApplication/app/src/main/res/values/style.xml
@@ -30,19 +30,27 @@
         <item name="android:textSize">28sp</item>
         <item name="android:textStyle">bold</item>
     </style>
+
     <style name="ForecastTodayTemp">
         <item name="android:textColor">@color/white</item>
         <item name="android:textSize">48sp</item>
         <item name="android:layout_margin">8dp</item>
     </style>
+
     <style name="ForecastTodayDetails">
         <item name="android:textColor">@color/white</item>
         <item name="android:textSize">24sp</item>
         <item name="android:layout_marginBottom">8dp</item>
     </style>
+
     <style name="BaseTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="colorControlNormal">@color/white</item>
         <item name="android:fontFamily">@font/bevan</item>
+        <item name="android:background">@color/bar_header</item>
+    </style>
+
+    <style name="ForecastTodayDescription">
+        <item name="android:textColor">@color/white</item>
     </style>
 
 </resources>
