update forecast details layout,add dark more theme,add on swipe refresher

--- a/9.6_WeatherApplication/app/src/main/res/layout/activity_main.xml
+++ b/9.6_WeatherApplication/app/src/main/res/layout/activity_main.xml
@@ -5,13 +5,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".screen.MainActivity">
+    tools:context=".MainActivity">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:titleTextColor="@color/white"
+        app:titleTextColor="@color/design_default_color_on_primary"
         android:theme="@style/BaseTheme"
         app:title="Weather" />
 
