--- a/9.6_WeatherApplication/app/src/main/res/layout-land/fragment_forecast_details.xml
+++ b/9.6_WeatherApplication/app/src/main/res/layout-land/fragment_forecast_details.xml
@@ -1,171 +1,310 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
-    <RelativeLayout
-        android:id="@+id/relativeLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@id/guideline"
-        app:layout_constraintTop_toTopOf="parent">
+    android:background="@drawable/gradient_bg"
+    android:orientation="vertical"
+    android:padding="8dp">
 
-        <ImageView
-            android:id="@+id/image_details"
-            android:layout_width="180dp"
-            android:layout_height="180dp"
-            android:layout_below="@id/date_details"
-            android:layout_alignParentStart="true"
-            android:layout_centerVertical="true"
-            android:layout_toStartOf="@id/date_details"
-            android:contentDescription="@string/image_details"
-            android:src="@drawable/a01d" />
-
-        <TextView
-            android:id="@+id/date_details"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="48dp"
-            android:foregroundGravity="center_horizontal"
-            android:gravity="center_horizontal"
-            android:textStyle="bold"
-            android:text="@string/today"
-            android:textSize="24sp" />
-
-        <TextView
-            android:id="@+id/tempHigh_details"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/date_details"
-            android:layout_alignParentEnd="true"
-            android:layout_marginEnd="87dp"
-            android:foregroundGravity="center_vertical"
-            android:text="@string/h"
-            android:textSize="56sp" />
-
-        <TextView
-            android:id="@+id/tempLow_details"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/tempHigh_details"
-            android:layout_alignEnd="@id/tempHigh_details"
-            android:text="@string/l"
-            android:textSize="56sp" />
-
-        <TextView
-            android:id="@+id/forecast_details"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="48dp"
-            android:foregroundGravity="center_horizontal"
-            android:layout_below="@id/date_details"
-            android:gravity="center_horizontal"
-
-            android:text="@string/forecast"
-            android:textSize="18sp" />
-    </RelativeLayout>
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline"
+    <TextView
+        android:id="@+id/date_details"
+        style="@style/ForecastTodayDescription"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.66" />
+        android:text="@string/today"
+        android:textSize="24sp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
+    <TextView
+        android:id="@+id/forecast_details"
+        style="@style/ForecastTodayDescription"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="@string/weather"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toBottomOf="@id/icon_details"
+        app:layout_constraintLeft_toRightOf="@id/icon_details"
+        app:layout_constraintTop_toTopOf="@id/icon_details" />
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <ImageView
+        android:id="@+id/icon_details"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:contentDescription="@string/image_details"
+        android:fontFamily="sans-serif-thin"
+        android:src="@drawable/a06d"
+        app:layout_constraintBottom_toTopOf="@+id/detailsContainer"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/date_details" />
+
+    <TextView
+        android:id="@+id/tempLow_details"
+        style="@style/ForecastTodayDescription"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/_100"
+        android:textSize="32sp"
+        app:layout_constraintRight_toLeftOf="@id/icon_details"
+        app:layout_constraintTop_toTopOf="@id/icon_details" />
+
+    <TextView
+        android:id="@+id/tempHigh_details"
+        style="@style/ForecastTodayDescription"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/_100"
+        android:textSize="32sp"
+        app:layout_constraintBottom_toBottomOf="@id/icon_details"
+        app:layout_constraintRight_toLeftOf="@id/icon_details" />
+
+    <LinearLayout
+        android:id="@+id/detailsContainer"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:background="@color/bar_bottom"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/guideline">
+        app:layout_constraintBottom_toBottomOf="parent">
 
-
-        <TextView
-            android:id="@+id/humidity_details"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="@string/humidity"
-            android:textColor="@color/white"
-            android:textSize="18sp"
-            android:layout_marginStart="16dp"
-            app:layout_constraintBottom_toTopOf="@id/presure_details"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:orientation="horizontal"
+            android:weightSum="3">
 
-        <TextView
-            android:id="@+id/humidity"
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="#3CF1EBF1"
+                android:gravity="center"
+                android:orientation="vertical"
+                android:padding="2dp">
+
+                <ImageView
+                    style="@style/ForecastDetailsIcons"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:contentDescription="@string/sunrise_icon"
+                    android:src="@drawable/sunrise" />
+
+                <Space
+                    android:layout_width="wrap_content"
+                    android:layout_height="5dp" />
+
+                <TextView
+                    style="@style/ForecastDetailsDescription"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/sunrise" />
+
+                <TextView
+                    android:id="@+id/sunrise"
+                    style="@style/ForecastDetailsDescription"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="14sp" />
+            </LinearLayout>
+
+            <Space
+                android:layout_width="2dp"
+                android:layout_height="wrap_content" />
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="#3CF1EBF1"
+                android:gravity="center"
+                android:orientation="vertical"
+                android:padding="2dp">
+
+                <ImageView
+                    style="@style/ForecastDetailsIcons"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:contentDescription="@string/sunset_icon"
+                    android:src="@drawable/sunset" />
+
+                <Space
+                    android:layout_width="wrap_content"
+                    android:layout_height="5dp" />
+
+                <TextView
+                    style="@style/ForecastDetailsDescription"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/sunset" />
+
+                <TextView
+                    android:id="@+id/sunset"
+                    style="@style/ForecastDetailsDescription"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="14sp" />
+            </LinearLayout>
+
+            <Space
+                android:layout_width="2dp"
+                android:layout_height="wrap_content" />
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="#3CF1EBF1"
+                android:gravity="center"
+                android:orientation="vertical"
+                android:padding="2dp">
+
+                <ImageView
+                    style="@style/ForecastDetailsIcons"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:contentDescription="@string/wind_icon"
+                    android:src="@drawable/wind" />
+
+                <Space
+                    android:layout_width="wrap_content"
+                    android:layout_height="5dp" />
+
+                <TextView
+                    style="@style/ForecastDetailsDescription"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/wind" />
+
+                <TextView
+                    android:id="@+id/wind"
+                    style="@style/DetailsForecastTextDetails"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="14sp" />
+            </LinearLayout>
+        </LinearLayout>
+
+        <Space
             android:layout_width="wrap_content"
+            android:layout_height="2dp" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="28sp"
-            android:textColor="@color/white"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toTopOf="@id/presure"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:text="@string/_100" />
+            android:orientation="horizontal"
+            android:weightSum="3">
 
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="#3CF1EBF1"
+                android:gravity="center"
+                android:orientation="vertical"
+                android:padding="2dp">
 
-        <TextView
-            android:id="@+id/presure_details"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/pressure"
-            android:textColor="@color/white"
-            android:textSize="18sp"
-            android:layout_marginStart="16dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+                <ImageView
+                    style="@style/ForecastDetailsIcons"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:contentDescription="@string/pressure_icon"
+                    android:src="@drawable/pressure" />
 
-        <TextView
-            android:id="@+id/presure"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:gravity="center"
-            android:text="@string/_100"
-            android:textSize="28sp"
-            android:textColor="@color/white"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+                <Space
+                    android:layout_width="wrap_content"
+                    android:layout_height="5dp" />
 
+                <TextView
+                    style="@style/ForecastDetailsDescription"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/pressure" />
 
-        <TextView
-            android:id="@+id/wind_details"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/white"
-            android:textSize="18sp"
-            android:layout_marginStart="16dp"
-            app:layout_constraintTop_toBottomOf="@id/presure_details"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:text="@string/wind" />
+                <TextView
+                    android:id="@+id/pressure"
+                    style="@style/DetailsForecastTextDetails"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="14sp" />
+            </LinearLayout>
 
-        <TextView
-            android:id="@+id/wind"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/presure"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:textSize="28sp"
-            android:textColor="@color/white"
-            android:textStyle="bold"
-            android:text="@string/_100" />
+            <Space
+                android:layout_width="2dp"
+                android:layout_height="wrap_content" />
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="#3CF1EBF1"
+                android:gravity="center"
+                android:orientation="vertical"
+                android:padding="2dp">
 
+                <ImageView
+                    style="@style/ForecastDetailsIcons"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:contentDescription="@string/humidity_icon"
+                    android:src="@drawable/humidity" />
+
+                <Space
+                    android:layout_width="wrap_content"
+                    android:layout_height="5dp" />
+
+                <TextView
+                    style="@style/ForecastDetailsDescription"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/humidity" />
+
+                <TextView
+                    android:id="@+id/humidity"
+                    style="@style/DetailsForecastTextDetails"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="14sp" />
+            </LinearLayout>
+
+            <Space
+                android:layout_width="2dp"
+                android:layout_height="wrap_content" />
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="#3CF1EBF1"
+                android:gravity="center"
+                android:orientation="vertical"
+                android:padding="2dp">
+
+                <ImageView
+                    style="@style/ForecastDetailsIcons"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:contentDescription="@string/precipitation_icon"
+                    android:src="@drawable/umbrella" />
+
+                <Space
+                    android:layout_width="wrap_content"
+                    android:layout_height="5dp" />
+
+                <TextView
+                    style="@style/ForecastDetailsDescription"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/precipitation" />
+
+                <TextView
+                    android:id="@+id/precipitation"
+                    style="@style/ForecastDetailsDescription"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="14sp" />
+            </LinearLayout>
+        </LinearLayout>
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
