--- a/9.6_WeatherApplication/app/src/main/res/values/style.xml
+++ b/9.6_WeatherApplication/app/src/main/res/values/style.xml
@@ -1,6 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <style name="AppTheme" parent="Theme.AppCompat.DayNight.NoActionBar">
+        <item name="android:colorBackground">@color/bar_header</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:tint">@color/white</item>
+        <item name="android:title">@color/white</item>
+        <item name="colorControlNormal">@color/white</item>
+        <item name="actionBarPopupTheme">@style/SubmenuHeaderStyle</item>
+        <item name="android:background">@color/bar_header</item>
+    </style>
+
+    <style name="SubmenuHeaderStyle" parent="ThemeOverlay.AppCompat.Light">
+        <item name="android:colorBackground">@color/bar_header</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
     <style name="SubTitleText">
         <item name="android:textSize">16sp</item>
         <item name="android:textColor">@color/bar_header</item>
@@ -12,7 +27,7 @@
     </style>
 
     <style name="ForecastLIstDegrees">
-        <item name="android:textColor">@color/bar_header</item>
+        <item name="android:textColor">@color/bar_bottom</item>
         <item name="android:text">"@string/_0"</item>
         <item name="android:textSize">30sp</item>
     </style>
@@ -43,7 +58,7 @@
         <item name="android:layout_marginBottom">8dp</item>
     </style>
 
-    <style name="BaseTheme" parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="BaseTheme" parent="Theme.AppCompat.DayNight.NoActionBar">
         <item name="colorControlNormal">@color/white</item>
         <item name="android:fontFamily">@font/bevan</item>
         <item name="android:background">@color/bar_header</item>
