--- a/9.6_WeatherApplication/app/src/main/res/layout/forecast_single_view.xml
+++ b/9.6_WeatherApplication/app/src/main/res/layout/forecast_single_view.xml
@@ -11,7 +11,7 @@
         android:layout_height="60dp"
         android:layout_margin="8dp"
         android:scaleType="fitCenter"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/textView_single_view_forecast"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:src="@drawable/a01d"
@@ -23,10 +23,10 @@
         android:layout_height="match_parent"
         android:layout_margin="8dp"
         android:text="@string/day_of_week"
+        android:textColor="@color/bar_bottom"
         android:textSize="18sp"
         android:textStyle="bold"
-        android:textColor="@color/bar_bottom"
-        app:layout_constraintBottom_toTopOf="@id/guideline_single_view_horizontal"
+        app:layout_constraintBottom_toBottomOf="@+id/icon_image_view"
         app:layout_constraintLeft_toRightOf="@id/icon_image_view"
         app:layout_constraintTop_toTopOf="@id/icon_image_view" />
 
@@ -34,13 +34,14 @@
         android:id="@+id/textView_single_view_forecast"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginBottom="8dp"
         android:text="@string/forecastContainer"
         android:textSize="16sp"
         android:textColor="@color/bar_header"
-        app:layout_constraintBottom_toBottomOf="@id/icon_image_view"
-        app:layout_constraintLeft_toRightOf="@id/icon_image_view"
-        app:layout_constraintTop_toBottomOf="@id/guideline_single_view_horizontal" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/icon_image_view" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline_single_view_horizontal"
