--- a/9.6_WeatherApplication/app/src/main/res/values/style.xml
+++ b/9.6_WeatherApplication/app/src/main/res/values/style.xml
@@ -11,6 +11,10 @@
         <item name="android:background">@color/bar_header</item>
     </style>
 
+    <style name="AlertDialogTheme" parent="Theme.AppCompat.DayNight.Dialog.Alert">
+        <item name="android:windowAnimationStyle">@android:style/Animation.Dialog</item>
+    </style>
+
     <style name="SubmenuHeaderStyle" parent="ThemeOverlay.AppCompat.Light">
         <item name="android:colorBackground">@color/bar_header</item>
         <item name="android:textColor">@color/white</item>
