--- a/9.6_WeatherApplication/app/src/main/res/values/themes.xml
+++ b/9.6_WeatherApplication/app/src/main/res/values/themes.xml
@@ -5,7 +5,7 @@
         <item name="colorPrimaryVariant">@color/purple_700</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
+        <item name="colorSecondary">@color/bar_header</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
