--- a/WeatherForecast/app/src/main/res/layout/layout_location_permission.xml
+++ b/WeatherForecast/app/src/main/res/layout/layout_location_permission.xml
@@ -3,7 +3,8 @@
     android:layout_width="wrap_content"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_marginHorizontal="32dp">
+    android:layout_marginHorizontal="32dp"
+    android:id="@+id/layout_location_permission">
 
     <TextView
         android:id="@+id/textview_location_permission"
