Location info is successfully retrieved but logic must be carried to view model and onChangeSharedPrefListener is to be updated

--- a/WeatherForecast/app/src/main/res/navigation/nav_graph.xml
+++ b/WeatherForecast/app/src/main/res/navigation/nav_graph.xml
@@ -15,8 +15,8 @@
             app:destination="@id/settingsFragment"
             app:enterAnim="@anim/slide_in_right"
             app:exitAnim="@anim/slide_out_left"
-            app:popEnterAnim="@anim/slide_in_right"
-            app:popExitAnim="@anim/slide_out_left" />
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right" />
         <action
             android:id="@+id/action_forecastFragment_to_forecastDetailsFragment"
             app:destination="@id/forecastDetailsFragment"
